@@ -1,6 +1,7 @@
 {:paths ["src" "resources"]
  :deps {org.clojure/clojure {:mvn/version "1.9.0"} ;; min clojure version
         babashka/fs {:mvn/version "0.1.6"}
+        babashka/process {:mvn/version "0.1.4"}
         clj-http/clj-http {:mvn/version "3.12.3"} ;; for jvm use
         org.clj-commons/clj-http-lite {:mvn/version "0.4.392"} ;; for babashka use
         cheshire/cheshire {:mvn/version "5.11.0"}
