@@ -94,6 +94,7 @@ Other Changes
 * https://github.com/clj-commons/etaoin/issues/413[#413]: Etaoin now exports a clj-kondo config to help with the linting of its many handy macros
 * https://github.com/clj-commons/etaoin/pull/357[#357]: Add support for connecting to a remote WebDriver via `:webdriver-url` (thanks https://github.com/verma[@verma] for the PR and https://github.com/mjmeintjes[@mjmeintjes] for the example usage!)
 * https://github.com/clj-commons/etaoin/issues/355[#355]: Add support for W3C WebDriver print to PDF feature
+* https://github.com/clj-commons/etaoin/issues/466[#466]: WebDriver process output can now also be directed to console
 * https://github.com/clj-commons/etaoin/issues/453[#453]: The `etaoin.api/with-<browser>` macros no longer require `opts` to be specified.
 This makes the advantage of newer `etaoin.api2/with-<browser>` macros maybe less obvious.
 That said, for Etaoin users who have adopted and prefer the api2 versions, they are still there, but no longer documented in the user guide.
